--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "git-commit-msg-linter": "^3.0.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5"
   },
