--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
     "nunjucks": "^3.2.1",
     "pg": "^8.2.1"
   }
